--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,5 @@ add_library(strochi SHARED String.cxx)
 include_directories(${googletest_SOURCE_DIR}/googletest/include)
 add_executable(test Test.cxx)
 target_link_libraries(test PRIVATE strochi gtest)
+add_executable(sort Sort.cxx)
+target_link_libraries(sort PRIVATE strochi)
