--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include(FetchContent)
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG 52eb8108c5bdec04579160ae17225d66034bd723
+  GIT_TAG "v1.17.0"
 )
 
 set(BUILD_SHARED_LIBS ON)
