--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ FetchContent_Declare(
   GIT_REPOSITORY https://github.com/google/googletest.git
   GIT_TAG "v1.17.0"
   GIT_PROGRESS TRUE
+  GIT_SHALLOW TRUE
 )
 
 set(BUILD_SHARED_LIBS ON)
